--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,31 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <android.support.design.widget.NavigationView
-            android:layout_width="395dp"
-            android:layout_height="408dp" tools:layout_editor_absoluteY="315dp" tools:layout_editor_absoluteX="8dp"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="412dp"
-            android:layout_height="221dp" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="-2dp">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout2">
         <TextView
                 android:text="Traf Liczbę"
                 android:layout_width="match_parent"
                 android:layout_height="43dp" android:id="@+id/textView2" android:textAlignment="gravity"
                 android:gravity="center" android:foregroundGravity="center"/>
-        <EditText
+        <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="57dp"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/editText" android:layout_weight="1"/>
+                android:layout_height="match_parent">
+
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="57dp"
+                    android:inputType="number|text"
+                    android:ems="10"
+                    android:id="@+id/editText" android:layout_weight="1" android:autoText="false"
+                    android:elegantTextHeight="false" android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="90dp" android:layout_alignParentStart="true"
+                    android:layout_marginStart="90dp"/>
+        </RelativeLayout>
         <Button
                 android:text="STRZELAJ"
                 android:layout_width="match_parent"
@@ -33,11 +40,19 @@
                 android:text="NOWA GRA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/button2"/>
+        <Button
+                android:text="Pokaż ranking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button3"/>
     </LinearLayout>
     <TextView
             android:text="Rekord"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="288dp"
-            tools:layout_editor_absoluteX="176dp" android:id="@+id/textView"/>
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.068"/>
 
 </android.support.constraint.ConstraintLayout>
