--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_ranking"/>
+    <include layout="@layout/ranking"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
