login/logout is working fine. problems with database copying

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,10 @@
                 android:text="Pokaż ranking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:id="@+id/button3"/>
+        <Button
+                android:text="Wyloguj"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button5"/>
     </LinearLayout>
     <TextView
             android:text="Rekord"
