--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,46 +7,43 @@
         android:layout_height="match_parent"
         tools:context=".LoginActivity">
 
-    <RelativeLayout
-            android:layout_width="376dp"
-            android:layout_height="286dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="229dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="266dp">
-
-        <LinearLayout
-                android:orientation="vertical"
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="320dp"
+            android:layout_height="412dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.493">
+        <TextView
+                android:text="Login"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <TextView
-                    android:text="Login"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/username"/>
-            <TextView
-                    android:text="Password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/textView8"/>
-            <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:ems="10"
-                    android:id="@+id/password"/>
-            <Button
-                    android:text="Sign In"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/signin"/>
-            <Button
-                    android:text="Sign Up"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/signup"/>
-        </LinearLayout>
-    </RelativeLayout>
+                android:layout_height="wrap_content" android:id="@+id/textView6"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/username"/>
+        <TextView
+                android:text="Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView8"/>
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/password"/>
+        <Button
+                android:text="Sign In"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/signin"/>
+        <Button
+                android:text="Sign Up"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/signup"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
