--- a/app/src/main/res/layout/activity_start_screen.xml
+++ b/app/src/main/res/layout/activity_start_screen.xml
@@ -8,7 +8,7 @@
         tools:context=".start_screen"
 >
     <TextView
-            android:text="WITAJ W APLIKACJI"
+            android:text="WELCOME TO CLICKER"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView3" android:textSize="30sp"
