--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,7 @@
                 android:gravity="center" android:foregroundGravity="center"/>
         <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="57dp"
-                    android:inputType="number|text"
-                    android:ems="10"
-                    android:id="@+id/editText" android:layout_weight="1" android:autoText="false"
-                    android:elegantTextHeight="false" android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="90dp" android:layout_alignParentStart="true"
-                    android:layout_marginStart="90dp"/>
-        </RelativeLayout>
+                android:layout_height="match_parent"/>
         <Button
                 android:text="CLICK"
                 android:layout_width="match_parent"
@@ -49,13 +38,30 @@
             android:text="Rekord"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/textView9"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/textView" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.068"/>
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.068"
+    />
     <TextView
             android:text="Wynik"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView10" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView4"
@@ -63,6 +69,6 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.057"/>
+            app:layout_constraintVertical_bias="0.191"/>
 
 </android.support.constraint.ConstraintLayout>
